--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="panel panel-custom">
     <div class="panel-heading">
-        Panel Heading
+        <app-navbar></app-navbar>
     </div>
     <div class="panel-body">
-        Panel Content
+        <app-routing></app-routing>
     </div>
 </div>
