setup routing and favicon

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div class="panel panel-custom">
+<div class="panel panel-default">
     <div class="panel-heading">
         <app-navbar></app-navbar>
     </div>
     <div class="panel-body">
-        <app-routing></app-routing>
+        <router-outlet></router-outlet>
     </div>
 </div>
