--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,5 +1,15 @@
-<ul class="nav nav-pills">
-    <li role="presentation" class="active"><a href="#">Home</a></li>
-    <li role="presentation"><a href="#">Profile</a></li>
-    <li role="presentation"><a href="#">Messages</a></li>
-</ul>
+<div class="row">
+    <div class="col-xs-5">
+        <ul class="nav nav-pills">
+            <li role="presentation"><a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a></li>
+            <li role="presentation"><a href="#">Delimiter</a></li>
+            <li role="presentation"><a href="#">Regex Checker</a></li>
+            <li role="presentation"><a href="#">Distinct Elements</a></li>
+            <li role="presentation"><a href="#">Difference Viewer</a></li>
+            <li role="presentation"><a href="#">Sorter</a></li>
+        </ul>
+    </div>
+    <div class="col-xs-2 text-center">
+        <h3>JS - Functions</h3>
+    </div>
+</div>
