--- a/src/app/core/landing/landing.component.html
+++ b/src/app/core/landing/landing.component.html
@@ -1,31 +1,33 @@
 <div class="row">
   <div class="link col-xs-6 col-sm-4 col-md-3">
     <a class="btn btn-default" href="#" role="button">
-      <img src="../../../assets/images/delimit.png" class="link-image"/>
+      <img src="assets/images/delimit.png" class="link-image"/>
       <h3>Delimiter</h3>
     </a>
   </div>
   <div class="link col-xs-6 col-sm-4 col-md-3">
     <a class="btn btn-default" href="#" role="button">
-      <img src="../../../assets/images/regex.png" class="link-image"/>
-      <h3>Regex Checker</h3>
+      <img src="assets/images/regex.png" class="link-image"/>
+      <div class="link-text">
+        <h3>Regex Checker</h3>
+      </div>
     </a>
   </div>
   <div class="link col-xs-6 col-sm-4 col-md-3">
     <a class="btn btn-default" href="#" role="button">
-      <img src="../../../assets/images/distinct.png" class="link-image"/>
-      <h3>Distinct Elements</h3>
+      <img src="assets/images/distinct.png" class="link-image"/>
+      <h3>Distinct Elements </h3>
     </a>
   </div>
   <div class="link col-xs-6 col-sm-4 col-md-3">
     <a class="btn btn-default" href="#" role="button">
-      <img src="../../../assets/images/development.png" class="link-image"/>
+      <img src="assets/images/development.png" class="link-image"/>
       <h3>Link</h3>
     </a>
   </div>
   <div class="link col-xs-6 col-sm-4 col-md-3">
     <a class="btn btn-default" href="#" role="button">
-      <img src="../../../assets/images/development.png" class="link-image"/>
+      <img src="assets/images/development.png" class="link-image"/>
       <h3>Link</h3>
     </a>
   </div>
