--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,15 +1,17 @@
 <div class="row">
     <div class="col-xs-5">
-        <ul class="nav nav-pills">
-            <li role="presentation"><a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a></li>
-            <li role="presentation"><a href="#">Delimiter</a></li>
-            <li role="presentation"><a href="#">Regex Checker</a></li>
-            <li role="presentation"><a href="#">Distinct Elements</a></li>
-            <li role="presentation"><a href="#">Difference Viewer</a></li>
-            <li role="presentation"><a href="#">Sorter</a></li>
-        </ul>
+        <div class="btn-group">
+            <a href="#" class="btn btn-default">
+                <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+            </a>
+            <a href="diff" class="btn btn-default">Delimiter</a>
+            <a href="regex" class="btn btn-default">Regex Checker</a>
+            <a href="distinct" class="btn btn-default">Distinct Elements</a>
+            <a href="diff" class="btn btn-default">Diff Viewer</a>
+            <a href="sort" class="btn btn-default">Sorter</a>
+        </div>
     </div>
     <div class="col-xs-2 text-center">
-        <h3>JS - Functions</h3>
+        <h4>JS - Functions</h4>
     </div>
 </div>
