--- a/src/app/core/page-not-found/page-not-found.component.html
+++ b/src/app/core/page-not-found/page-not-found.component.html
@@ -1,3 +1,9 @@
-<p>
-  page-not-found works!
-</p>
+<div class="jumbotron">
+  <div class="container">
+    <h1>404! Page Not Found</h1>
+    <p>Click the button below to head back home</p>
+    <p>
+      <a class="btn btn-primary btn-lg" href="/" role="button">Go Home</a>
+    </p>
+  </div>
+</div>
