--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -7,7 +7,7 @@
         </a>
       </li>
       <li>
-        <a href="diff" class="btn btn-default">Delimiter</a>
+        <a href="delimit" class="btn btn-default">Delimiter</a>
       </li>
       <li>
         <a href="regex" class="btn btn-default">Regex Checker</a>
