--- a/src/app/core/landing/landing.component.html
+++ b/src/app/core/landing/landing.component.html
@@ -1,11 +1,11 @@
 <div class="row">
-  <div class="link col-xs-6 col-sm-4 col-md-3">
+  <div class="link col-sm-4 col-md-3">
     <a class="btn btn-default" href="delimit" role="button">
       <img src="assets/images/delimit.png" class="link-image"/>
       <h3>Delimiter</h3>
     </a>
   </div>
-  <div class="link col-xs-6 col-sm-4 col-md-3">
+  <div class="link col-sm-4 col-md-3">
     <a class="btn btn-default" href="regex" role="button">
       <img src="assets/images/regex.png" class="link-image"/>
       <div class="link-text">
@@ -13,19 +13,19 @@
       </div>
     </a>
   </div>
-  <div class="link col-xs-6 col-sm-4 col-md-3">
+  <div class="link col-sm-4 col-md-3">
     <a class="btn btn-default" href="distinct" role="button">
       <img src="assets/images/distinct.png" class="link-image"/>
       <h3>Distinct Elements </h3>
     </a>
   </div>
-  <div class="link col-xs-6 col-sm-4 col-md-3">
+  <div class="link col-sm-4 col-md-3">
     <a class="btn btn-default" href="diff" role="button">
       <img src="assets/images/development.png" class="link-image"/>
       <h3>Diff Viewer</h3>
     </a>
   </div>
-  <div class="link col-xs-6 col-sm-4 col-md-3">
+  <div class="link col-sm-4 col-md-3">
     <a class="btn btn-default" href="sort" role="button">
       <img src="assets/images/development.png" class="link-image"/>
       <h3>Sorter</h3>
