--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-lg-4 col-md-6 col-sm-8 col-xs-12">
+  <div class="col-lg-4 col-md-6 col-sm-8 hidden-xs">
     <ul class="nav nav-pills nav-justified">
       <li>
         <a href="#" class="btn btn-default">
@@ -25,5 +25,30 @@
   </div>
   <div class="col-lg-offset-5 col-md-offset-3 col-sm-offset-1 col-sm-3 hidden-xs text-right">
     <h4>JS - Functions</h4>
+  </div>
+  <div class="visible-xs-block col-xs-12">
+    <ul class="nav nav-pills nav-justified">
+      <li (click)="drop()"><a class="btn btn-default">Menu <span class="caret"></span></a></li>
+      <li *ngIf="dropdown">
+        <a href="#" class="btn btn-default">
+          <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+        </a>
+      </li>
+      <li *ngIf="dropdown">
+        <a href="delimit" class="btn btn-default">Delimiter</a>
+      </li>
+      <li *ngIf="dropdown">
+        <a href="regex" class="btn btn-default">Regex Checker</a>
+      </li>
+      <li *ngIf="dropdown">
+        <a href="distinct" class="btn btn-default">Distinct Elements</a>
+      </li>
+      <li *ngIf="dropdown">
+        <a href="diff" class="btn btn-default">Diff Viewer</a>
+      </li>
+      <li *ngIf="dropdown">
+        <a href="sort" class="btn btn-default">Sorter</a>
+      </li>
+    </ul>
   </div>
 </div>
