started diff and logo for sort done

--- a/src/app/core/landing/landing.component.html
+++ b/src/app/core/landing/landing.component.html
@@ -27,7 +27,7 @@
   </div>
   <div class="link col-sm-4 col-md-3">
     <a class="btn btn-default" href="sort" role="button">
-      <img src="assets/images/development.png" class="link-image"/>
+      <img src="assets/images/sort.png" class="link-image"/>
       <h3>Sorter</h3>
     </a>
   </div>
