--- a/src/app/diff/diff.component.html
+++ b/src/app/diff/diff.component.html
@@ -1,3 +1,14 @@
-<p>
-  diff works!
-</p>
+<div class="row">
+  <div class="col-sm-6">
+    <h3 class="text-center">Original</h3>
+    <textarea class="form-control" rows="10" #left (change)="sort(left.value, right.value)"></textarea>
+  </div>
+  <div class="col-sm-6">
+    <h3 class="text-center">Compare To</h3>
+    <textarea class="form-control" rows="10" #right (change)="sort(left.value, right.value)"></textarea>
+  </div>
+  <div *ngIf="output" class="col-sm-12">
+      <h3 class="text-center">Output</h3>
+      <textarea class="form-control" rows="10" readonly>{{output}}</textarea>
+  </div>
+</div>
