--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <ul class="nav nav-pills nav-justified">
       <li>
         <a href="#" class="btn btn-default">
-          <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+          <span class="glyphicon glyphicon-home" aria-hidden="true" alt="home"></span>
         </a>
       </li>
       <li>
