--- a/src/app/core/landing/landing.component.html
+++ b/src/app/core/landing/landing.component.html
@@ -31,4 +31,10 @@
       <h3>Sorter</h3>
     </a>
   </div>
+  <div class="link col-sm-4 col-md-3">
+    <a class="btn btn-default" href="convert" role="button">
+      <img src="assets/images/converter.png" class="link-image" alt="conversion"/>
+      <h3>Timestamp Converter</h3>
+    </a>
+  </div>
 </div>
