--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -21,6 +21,9 @@
       <li>
         <a href="sort" class="btn btn-default">Sorter</a>
       </li>
+      <li>
+        <a href="convert" class="btn btn-default">Timestamp Converter</a>
+      </li>
     </ul>
   </div>
   <div class="col-lg-offset-5 col-md-offset-3 col-sm-offset-1 col-sm-3 hidden-xs text-right">
@@ -48,6 +51,9 @@
       </li>
       <li *ngIf="dropdown">
         <a href="sort" class="btn btn-default">Sorter</a>
+      </li>
+      <li *ngIf="dropdown">
+        <a href="convert" class="btn btn-default">Timestamp Converter</a>
       </li>
     </ul>
   </div>
