--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <app-navbar></app-navbar>
-    </div>
-    <div class="panel-body">
-        <router-outlet></router-outlet>
-    </div>
+<div class="container-fluid">
+  <app-navbar></app-navbar>
+  <router-outlet></router-outlet>
 </div>
