--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,60 +1,15 @@
-<div class="row">
-  <div class="col-lg-4 col-md-6 col-sm-8 hidden-xs">
-    <ul class="nav nav-pills nav-justified">
-      <li>
-        <a href="#" class="btn btn-default">
-          <span class="glyphicon glyphicon-home" aria-hidden="true" alt="home"></span>
-        </a>
-      </li>
-      <li>
-        <a href="delimit" class="btn btn-default">Delimiter</a>
-      </li>
-      <li>
-        <a href="regex" class="btn btn-default">Regex Checker</a>
-      </li>
-      <li>
-        <a href="distinct" class="btn btn-default">Distinct Elements</a>
-      </li>
-      <li>
-        <a href="diff" class="btn btn-default">Diff Viewer</a>
-      </li>
-      <li>
-        <a href="sort" class="btn btn-default">Sorter</a>
-      </li>
-      <li>
-        <a href="convert" class="btn btn-default">Timestamp Converter</a>
-      </li>
-    </ul>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark row">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" href="#navCollapse"
+    aria-controls="navCollapse" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="navbar-collapse" id="navCollapse">
+    <a href="#" class="nav-link"><i class="fas fa-home" alt="home"></i></a>
+    <a href="delimit" class="nav-link">Delimiter</a>
+    <a href="regex" class="nav-link">Regex Checker</a>
+    <a href="distinct" class="nav-link">Distinct Elements</a>
+    <a href="diff" class="nav-link">Diff Viewer</a>
+    <a href="sort" class="nav-link">Sorter</a>
+    <a href="convert" class="nav-link">Timestamp Converter</a>
   </div>
-  <div class="col-lg-offset-5 col-md-offset-3 col-sm-offset-1 col-sm-3 hidden-xs text-right">
-    <h4>JS - Functions</h4>
-  </div>
-  <div class="visible-xs-block col-xs-12">
-    <ul class="nav nav-pills nav-justified">
-      <li (click)="drop()"><a class="btn btn-default">Menu <span class="caret"></span></a></li>
-      <li *ngIf="dropdown">
-        <a href="#" class="btn btn-default">
-          <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-        </a>
-      </li>
-      <li *ngIf="dropdown">
-        <a href="delimit" class="btn btn-default">Delimiter</a>
-      </li>
-      <li *ngIf="dropdown">
-        <a href="regex" class="btn btn-default">Regex Checker</a>
-      </li>
-      <li *ngIf="dropdown">
-        <a href="distinct" class="btn btn-default">Distinct Elements</a>
-      </li>
-      <li *ngIf="dropdown">
-        <a href="diff" class="btn btn-default">Diff Viewer</a>
-      </li>
-      <li *ngIf="dropdown">
-        <a href="sort" class="btn btn-default">Sorter</a>
-      </li>
-      <li *ngIf="dropdown">
-        <a href="convert" class="btn btn-default">Timestamp Converter</a>
-      </li>
-    </ul>
-  </div>
-</div>
+</nav>
