Fixed nav and bootstrap config

--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,10 +1,10 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark row">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" href="#navCollapse"
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">JS Text Tools</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navCollapse"
     aria-controls="navCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="navbar-collapse" id="navCollapse">
-    <a href="#" class="nav-link"><i class="fas fa-home" alt="home"></i></a>
+  <div class="collapse navbar-collapse text-center" id="navCollapse">
     <a href="delimit" class="nav-link">Delimiter</a>
     <a href="regex" class="nav-link">Regex Checker</a>
     <a href="distinct" class="nav-link">Distinct Elements</a>
