--- a/src/app/core/landing/landing.component.html
+++ b/src/app/core/landing/landing.component.html
@@ -1,12 +1,12 @@
 <div class="row">
   <div class="link col-sm-4 col-md-3">
-    <a class="btn btn-default" href="delimit" role="button">
+    <a class="btn btn-default border rounded" href="delimit" role="button">
       <img src="assets/images/delimit.png" class="link-image" alt="delimited letters"/>
       <h3>Delimiter</h3>
     </a>
   </div>
   <div class="link col-sm-4 col-md-3">
-    <a class="btn btn-default" href="regex" role="button">
+    <a class="btn btn-default border rounded" href="regex" role="button">
       <img src="assets/images/regex.png" class="link-image" alt="regex formula"/>
       <div class="link-text">
         <h3>Regex Checker</h3>
@@ -14,25 +14,25 @@
     </a>
   </div>
   <div class="link col-sm-4 col-md-3">
-    <a class="btn btn-default" href="distinct" role="button">
+    <a class="btn btn-default border rounded" href="distinct" role="button">
       <img src="assets/images/distinct.png" class="link-image" alt="getting distinct elements"/>
       <h3>Distinct Elements </h3>
     </a>
   </div>
   <div class="link col-sm-4 col-md-3">
-    <a class="btn btn-default" href="diff" role="button">
+    <a class="btn btn-default border rounded" href="diff" role="button">
       <img src="assets/images/development.png" class="link-image" alt="under development"/>
       <h3>Diff Viewer</h3>
     </a>
   </div>
   <div class="link col-sm-4 col-md-3">
-    <a class="btn btn-default" href="sort" role="button">
+    <a class="btn btn-default border rounded" href="sort" role="button">
       <img src="assets/images/sort.png" class="link-image" alt="text sorting"/>
       <h3>Sorter</h3>
     </a>
   </div>
   <div class="link col-sm-4 col-md-3">
-    <a class="btn btn-default" href="convert" role="button">
+    <a class="btn btn-default border rounded" href="convert" role="button">
       <img src="assets/images/converter.png" class="link-image" alt="conversion"/>
       <h3>Timestamp Converter</h3>
     </a>
