--- a/src/app/core/landing/landing.component.scss
+++ b/src/app/core/landing/landing.component.scss
@@ -1,5 +1,5 @@
 .link {
-    padding-bottom: 15px;
+    padding-bottom: 1rem;
 }
 
 .link-image{
@@ -8,5 +8,5 @@
 }
 
 .btn {
- width: 100%;
+  width: 100%;
 }
