--- a/src/app/core/landing/landing.component.html
+++ b/src/app/core/landing/landing.component.html
@@ -1,40 +1,56 @@
 <div class="row">
-  <div class="link col-sm-4 col-md-3">
-    <a class="btn btn-default border rounded" href="delimit" role="button">
-      <img src="assets/images/delimit.png" class="link-image" alt="delimited letters"/>
-      <h3>Delimiter</h3>
-    </a>
-  </div>
-  <div class="link col-sm-4 col-md-3">
-    <a class="btn btn-default border rounded" href="regex" role="button">
-      <img src="assets/images/regex.png" class="link-image" alt="regex formula"/>
-      <div class="link-text">
-        <h3>Regex Checker</h3>
+  <div class="col-sm-4 col-md-3">
+    <div class="card bg-dark mb-3">
+      <img src="assets/images/delimit.png" class="card-img-top" alt="delimited letters">
+      <div class="card-body">
+        <h5 class="card-title">Delimiter</h5>
+        <a href="delimit" class="stretched-link"></a>
       </div>
-    </a>
+    </div>
   </div>
-  <div class="link col-sm-4 col-md-3">
-    <a class="btn btn-default border rounded" href="distinct" role="button">
-      <img src="assets/images/distinct.png" class="link-image" alt="getting distinct elements"/>
-      <h3>Distinct Elements </h3>
-    </a>
+  <div class="col-sm-4 col-md-3">
+    <div class="card bg-dark mb-3">
+      <img src="assets/images/regex.png" class="card-img-top" alt="regex formula">
+      <div class="card-body">
+        <h5 class="card-title">Regex Checker</h5>
+        <a href="regex" class="stretched-link"></a>
+      </div>
+    </div>
   </div>
-  <div class="link col-sm-4 col-md-3">
-    <a class="btn btn-default border rounded" href="diff" role="button">
-      <img src="assets/images/development.png" class="link-image" alt="under development"/>
-      <h3>Diff Viewer</h3>
-    </a>
+  <div class="col-sm-4 col-md-3">
+    <div class="card bg-dark mb-3">
+      <img src="assets/images/distinct.png" class="card-img-top" alt="getting distinct elements">
+      <div class="card-body">
+        <h5 class="card-title">Distinct Elements</h5>
+        <a href="distinct" class="stretched-link"></a>
+      </div>
+    </div>
   </div>
-  <div class="link col-sm-4 col-md-3">
-    <a class="btn btn-default border rounded" href="sort" role="button">
-      <img src="assets/images/sort.png" class="link-image" alt="text sorting"/>
-      <h3>Sorter</h3>
-    </a>
+  <div class="col-sm-4 col-md-3">
+    <div class="card bg-dark mb-3">
+      <img src="assets/images/development.png" class="card-img-top" alt="under development">
+      <div class="card-body">
+        <h5 class="card-title">Diff Viewer</h5>
+        <a href="diff" class="stretched-link"></a>
+      </div>
+    </div>
   </div>
-  <div class="link col-sm-4 col-md-3">
-    <a class="btn btn-default border rounded" href="convert" role="button">
-      <img src="assets/images/converter.png" class="link-image" alt="conversion"/>
-      <h3>Timestamp Converter</h3>
-    </a>
+  <div class="col-sm-4 col-md-3">
+    <div class="card bg-dark mb-3">
+      <img src="assets/images/sort.png" class="card-img-top" alt="text sorting">
+      <div class="card-body">
+        <h5 class="card-title">Sorter</h5>
+        <a href="sort" class="stretched-link"></a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-4 col-md-3">
+    <div class="card bg-dark mb-3">
+      <img src="assets/images/converter.png" class="card-img-top" alt="conversion">
+      <div class="card-body">
+        <h5 class="card-title">Diff Viewer</h5>
+        <a href="convert" class="stretched-link"></a>
+      </div>
+    </div>
   </div>
 </div>
