--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,15 +1,15 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">JS Text Tools</a>
+<nav class="navbar navbar-expand-md bg-dark border-bottom border-purple">
+  <a class="navbar-brand font-weight-bold text-purple" href="#">JS <span class="font-weight-light">Text Tools</span></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navCollapse"
     aria-controls="navCollapse" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+    <i class="fas fa-bars text-purple"></i>
   </button>
   <div class="collapse navbar-collapse text-center" id="navCollapse">
-    <a href="delimit" class="nav-link">Delimiter</a>
-    <a href="regex" class="nav-link">Regex Checker</a>
-    <a href="distinct" class="nav-link">Distinct Elements</a>
-    <a href="diff" class="nav-link">Diff Viewer</a>
-    <a href="sort" class="nav-link">Sorter</a>
-    <a href="convert" class="nav-link">Timestamp Converter</a>
+    <a href="delimit" class="nav-link text-light">Delimiter</a>
+    <a href="regex" class="nav-link text-light">Regex Checker</a>
+    <a href="distinct" class="nav-link text-light">Distinct Elements</a>
+    <a href="diff" class="nav-link text-light">Diff Viewer</a>
+    <a href="sort" class="nav-link text-light">Sorter</a>
+    <a href="convert" class="nav-link text-light">Timestamp Converter</a>
   </div>
 </nav>
