--- a/src/app/core/page-not-found/page-not-found.component.html
+++ b/src/app/core/page-not-found/page-not-found.component.html
@@ -1,9 +1,7 @@
-<div class="jumbotron">
-  <div class="container">
-    <h1>404! Page Not Found</h1>
-    <p>Click the button below to head back home</p>
-    <p>
-      <a class="btn btn-primary btn-lg" href="/" role="button">Go Home</a>
-    </p>
-  </div>
+<div class="jumbotron bg-dark">
+  <h1>404! Page Not Found</h1>
+  <p>Click the button below to head back home</p>
+  <p>
+    <a class="btn btn-purple btn-lg" href="/" role="button">Go Home</a>
+  </p>
 </div>
