--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,15 @@ body{
   width:400px;            /* As IE6 ignores !important it will set width as 1000px; */
 }
 
+.centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100px;
+  height: 100px;
+}
+
 .bs-datepicker {
   background: transparent !important;
   box-shadow: none;
