diff viewer working

--- a/src/app/core/landing/landing.component.html
+++ b/src/app/core/landing/landing.component.html
@@ -28,7 +28,7 @@
   </div>
   <div class="col-sm-4 col-md-3">
     <div class="card bg-dark mb-3">
-      <img src="assets/images/development.png" class="card-img-top" alt="under development">
+      <img src="assets/images/diff.png" class="card-img-top" alt="difference viewer">
       <div class="card-body">
         <h5 class="card-title">Diff Viewer</h5>
         <a href="diff" class="stretched-link"></a>
@@ -48,7 +48,7 @@
     <div class="card bg-dark mb-3">
       <img src="assets/images/converter.png" class="card-img-top" alt="conversion">
       <div class="card-body">
-        <h5 class="card-title">Diff Viewer</h5>
+        <h5 class="card-title">Timestamp Converter</h5>
         <a href="convert" class="stretched-link"></a>
       </div>
     </div>
