--- a/src/app/core/landing/landing.component.html
+++ b/src/app/core/landing/landing.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sm-4 col-md-3">
+  <div class="col-sm-6 col-md-4 col-lg-3">
     <div class="card bg-dark mb-3">
       <img src="assets/images/delimit.png" class="card-img-top" alt="delimited letters">
       <div class="card-body">
@@ -8,7 +8,7 @@
       </div>
     </div>
   </div>
-  <div class="col-sm-4 col-md-3">
+  <div class="col-sm-6 col-md-4 col-lg-3">
     <div class="card bg-dark mb-3">
       <img src="assets/images/regex.png" class="card-img-top" alt="regex formula">
       <div class="card-body">
@@ -17,7 +17,7 @@
       </div>
     </div>
   </div>
-  <div class="col-sm-4 col-md-3">
+  <div class="col-sm-6 col-md-4 col-lg-3">
     <div class="card bg-dark mb-3">
       <img src="assets/images/distinct.png" class="card-img-top" alt="getting distinct elements">
       <div class="card-body">
@@ -26,7 +26,7 @@
       </div>
     </div>
   </div>
-  <div class="col-sm-4 col-md-3">
+  <div class="col-sm-6 col-md-4 col-lg-3">
     <div class="card bg-dark mb-3">
       <img src="assets/images/diff.png" class="card-img-top" alt="difference viewer">
       <div class="card-body">
@@ -35,7 +35,7 @@
       </div>
     </div>
   </div>
-  <div class="col-sm-4 col-md-3">
+  <div class="col-sm-6 col-md-4 col-lg-3">
     <div class="card bg-dark mb-3">
       <img src="assets/images/sort.png" class="card-img-top" alt="text sorting">
       <div class="card-body">
@@ -44,7 +44,7 @@
       </div>
     </div>
   </div>
-  <div class="col-sm-4 col-md-3">
+  <div class="col-sm-6 col-md-4 col-lg-3">
     <div class="card bg-dark mb-3">
       <img src="assets/images/converter.png" class="card-img-top" alt="conversion">
       <div class="card-body">
