--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md bg-dark border-bottom border-purple">
+<nav class="navbar fixed-top navbar-expand-md bg-dark border-bottom border-purple">
   <a class="navbar-brand font-weight-bold text-purple" href="#">JS <span class="font-weight-light">Text Tools</span></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navCollapse"
     aria-controls="navCollapse" aria-expanded="false" aria-label="Toggle navigation">
