--- a/src/app/delimiter/delimiter.component.html
+++ b/src/app/delimiter/delimiter.component.html
@@ -4,52 +4,58 @@
     <textarea class="form-control" rows="8" #input></textarea>
   </div>
   <div class="col-lg-4 mb-2">
-      <h3 class="text-center">Delimit</h3>
-      <div class="row mb-2">
-        <div class="col-lg-6 col-md-3 col-sm-6">
-            <div class="bg-dark-purple text-center form-control border-0">Newline:</div>
-        </div>
-        <div class="col-lg-6 col-md-3 col-sm-6">
-            <button type="button" class="btn btn-dark btn-block" (click)="replace(input.value, '\n', ',')">Comma</button>
-        </div>
-        <div class="col-lg-6 col-md-3 col-sm-6">
-            <button type="button" class="btn btn-dark btn-block" (click)="replace(input.value, '\n', ',\n')">Comma & Newline</button>
-        </div>
-        <div class="col-lg-6 col-md-3 col-sm-6">
-          <button type="button" class="btn btn-dark btn-block" (click)="replace(input.value, '\n', ' ')">Space</button>
+    <h3 class="text-center">Delimit</h3>
+    <div class="form-row mb-2">
+      <div class="col-lg-6 col-md-3 col-sm-6">
+        <div class="bg-dark-purple text-center form-control border-0">Newline:</div>
       </div>
+      <div class="col-lg-6 col-md-3 col-sm-6">
+        <button type="button" class="btn btn-dark btn-block" (click)="replace(input.value, '\n', ',')">Comma</button>
       </div>
-      <div class="row mb-2">
-        <div class="col-lg-6 col-md-3 col-sm-6">
-            <div class="bg-dark-purple text-center form-control border-0">Space:</div>
-        </div>
-        <div class="col-lg-6 col-md-3 col-sm-6">
-            <button type="button" class="btn btn-dark btn-block" (click)="replace(input.value, ' ', ',')">Comma</button>
-        </div>
-        <div class="col-lg-6 col-md-3 col-sm-6">
-            <button type="button" class="btn btn-dark btn-block" (click)="replace(input.value, ' ', ',\n')">Comma & Newline</button>
-        </div>
-        <div class="col-lg-6 col-md-3 col-sm-6">
-          <button type="button" class="btn btn-dark btn-block" (click)="replace(input.value, ' ', '\n')">Newline</button>
+      <div class="col-lg-6 col-md-3 col-sm-6">
+        <button type="button" class="btn btn-dark btn-block" (click)="replace(input.value, '\n', ',\n')">Comma &
+          Newline</button>
       </div>
+      <div class="col-lg-6 col-md-3 col-sm-6">
+        <button type="button" class="btn btn-dark btn-block" (click)="replace(input.value, '\n', ' ')">Space</button>
       </div>
-      <div class="row">
-          <div class="col-lg-6 col-md-3 col-sm-6">
-              <div class="bg-dark-purple text-center form-control border-0">Custom:</div>
-          </div>
-        <div class="col-lg-6 col-md-3 col-sm-6">
-          <textarea class="form-control" rows="1" #old placeholder="Input"></textarea>
-        </div>
-        <div class="col-lg-6 col-md-3 col-sm-6">
-          <textarea class="form-control" rows="1" #new placeholder="Output"></textarea>
-        </div>
-        <div class="col-lg-6 col-md-3 col-sm-6">
-          <button type="button" class="btn btn-dark btn-block" (click)="replace(input.value, old.value, new.value)">Submit</button>
-        </div>
+    </div>
+    <div class="form-row mb-2">
+      <div class="col-lg-6 col-md-3 col-sm-6">
+        <div class="bg-dark-purple text-center form-control border-0">Space:</div>
       </div>
+      <div class="col-lg-6 col-md-3 col-sm-6">
+        <button type="button" class="btn btn-dark btn-block" (click)="replace(input.value, ' ', ',')">Comma</button>
+      </div>
+      <div class="col-lg-6 col-md-3 col-sm-6">
+        <button type="button" class="btn btn-dark btn-block" (click)="replace(input.value, ' ', ',\n')">Comma &
+          Newline</button>
+      </div>
+      <div class="col-lg-6 col-md-3 col-sm-6">
+        <button type="button" class="btn btn-dark btn-block" (click)="replace(input.value, ' ', '\n')">Newline</button>
+      </div>
+    </div>
+    <div class="form-row">
+      <div class="col-lg-6 col-md-2 col-sm-6">
+        <div class="bg-dark-purple text-center form-control border-0">Custom:</div>
+      </div>
+      <div class="col-lg-6 col-md-3 col-sm-6">
+        <textarea class="form-control" rows="1" #old placeholder="Input"></textarea>
+      </div>
+      <div class="col-lg-6 col-md-3 col-sm-6">
+        <textarea class="form-control" rows="1" #new placeholder="Output"></textarea>
+      </div>
+      <div class="col-lg-3 col-md-2 col-sm-3">
+        <input type="text" class="form-control" #wrap placeholder="Wrap">
+      </div>
+      <div class="col-lg-3 col-md-2 col-sm-3">
+          <button type="button" class="btn btn-dark btn-block"
+          (click)="wrapAndReplace(input.value, old.value, new.value, wrap.value)">Submit</button>
+      </div>
+    </div>
   </div>
   <div class="col-lg-4 mb-2">
-      <h3 class="text-center">Output</h3>
-      <textarea class="form-control" rows="8" readonly>{{output}}</textarea>
+    <h3 class="text-center">Output</h3>
+    <textarea class="form-control" rows="8" readonly>{{output}}</textarea>
   </div>
 </div>
