--- a/src/app/delimiter/delimiter.component.html
+++ b/src/app/delimiter/delimiter.component.html
@@ -55,7 +55,6 @@
     </div>
   </div>
   <div class="col-lg-4 mb-2">
-    <h3 class="text-center">Output</h3>
-    <textarea class="form-control" rows="8" readonly>{{output}}</textarea>
+    <app-output-block [output]="output"></app-output-block>
   </div>
 </div>
