--- a/src/app/delimiter/delimiter.component.html
+++ b/src/app/delimiter/delimiter.component.html
@@ -55,6 +55,6 @@
     </div>
   </div>
   <div class="col-lg-4 mb-2">
-    <app-output-block [output]="output"></app-output-block>
+    <jstt-output-block [output]="output"></jstt-output-block>
   </div>
 </div>
