--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<jstt-navbar></jstt-navbar>
 <div class="container-fluid mt-5 pt-4">
   <router-outlet></router-outlet>
 </div>
