--- a/src/app/diff/diff.component.html
+++ b/src/app/diff/diff.component.html
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col-sm-6">
     <h3 class="text-center">Original</h3>
-    <textarea class="form-control" rows="10" #left (change)="sort(left.value, right.value)"></textarea>
+    <textarea class="form-control" rows="10" #left (change)="diff(left.value, right.value)"></textarea>
   </div>
   <div class="col-sm-6">
     <h3 class="text-center">Compare To</h3>
-    <textarea class="form-control" rows="10" #right (change)="sort(left.value, right.value)"></textarea>
+    <textarea class="form-control" rows="10" #right (change)="diff(left.value, right.value)"></textarea>
   </div>
   <table *ngIf="output" class="table table-borderless table-sm table-dark col-sm-12 mt-3">
       <thead>
