--- a/src/app/distinct/distinct.component.html
+++ b/src/app/distinct/distinct.component.html
@@ -4,14 +4,14 @@
     <textarea class="form-control" rows="10" #input (change)="distinct(input.value)"></textarea>
   </div>
   <div class="col-sm-6">
-    <app-output-block [output]="output"></app-output-block>
+    <jstt-output-block [output]="output"></jstt-output-block>
   </div>
 </div>
 <div class="row mt-3">
   <div class="col-sm-6">
-    <app-output-block [title]="'Non Duplicates'" [output]="nonDuplicates"></app-output-block>
+    <jstt-output-block [title]="'Non Duplicates'" [output]="nonDuplicates"></jstt-output-block>
   </div>
   <div class="col-sm-6">
-    <app-output-block [title]="'Duplicates'" [output]="duplicates"></app-output-block>
+    <jstt-output-block [title]="'Duplicates'" [output]="duplicates"></jstt-output-block>
   </div>
 </div>
