--- a/src/app/sort/sort.component.html
+++ b/src/app/sort/sort.component.html
@@ -4,6 +4,6 @@
     <textarea class="form-control" rows="10" #input (change)="sort(input.value)"></textarea>
   </div>
   <div class="col-sm-6">
-      <app-output-block [output]="output"></app-output-block>
+      <jstt-output-block [output]="output"></jstt-output-block>
   </div>
 </div>
